--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [project]
-name = "poetry-testi"
+name = "weather-app"
 version = "0.1.0"
-description = ""
+description = "Sovellus joka näyttää nykyisen säätilan ja ennusteen käyttäjälle"
 authors = [
     {name = "Ayanlee1",email = "ayanle.abdi@helsinki.fi"}
 ]
 readme = "README.md"
 requires-python = "^3.10"
 dependencies = [
-    "cowsay (>=6.1,<7.0)"
 ]
 
 
@@ -18,5 +17,8 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pytest (>=9.0.0,<10.0.0)"
+    "pytest (>=9.0.1,<10.0.0)",
+    "coverage (>=7.12.0,<8.0.0)",
+    "invoke (>=2.2.1,<3.0.0)",
+    "pylint (>=4.0.3,<5.0.0)"
 ]
