--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = "^3.10"
 dependencies = [
-    "python-dotenv"
+    "python-dotenv",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 
